# collatz

./: Cargo.toml  Readme.md
benches/: collatz_benches.rs
src/: collatz.rs  main.rs
