[package]
name = "collatz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "collatz"
path = "src/collatz.rs"
crate-type = ["lib"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
threadpool = "1.8.1"
thousands = "0.2.0"
num_cpus = "1.14.0"
log = "0.4"